@@ -20,7 +20,6 @@ package org.nlpub.watset.cli;
 import com.beust.jcommander.IStringConverter;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Converter of string options to {@link Path}.
@@ -28,6 +27,6 @@ import java.nio.file.Paths;
 public class PathConverter implements IStringConverter<Path> {
     @Override
     public Path convert(String value) {
-        return Paths.get(value);
+        return Path.of(value);
     }
 }
